Config class added theater class impl